[build-system]
requires = ["setuptools>=49.1.1", "wheel"]

[tool.black]
line-length = 100
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
)/
| docs/conf.py
'''

[tool.isort]
known_third_party = [
    'allpairspy',
    'loguru',
    'pingparsing',
    'pytest',
    'readmemaker',
    'sphinx_rtd_theme',
]
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
    '*/.eggs/*',
    '*/.pytype/*',
    '*/.tox/*',
]

[tool.pytest.ini_options]
testpaths = [
    "test",
]

md_report = true
md_report_verbose = 0
md_report_color = "auto"

discord_verbose = 1
