[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools_scm>=7,<8; python_version<'3.8'",
  "setuptools_scm>=8; python_version>='3.8'",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.black]
line-length = 100
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | buck-out
    | build
    | dist
)/
| docs/conf.py
'''
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
known_third_party = [
    'allpairspy',
    'loguru',
    'pingparsing',
    'pytest',
    'readmemaker',
    'sphinx_rtd_theme',
]
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
skip_glob = [
    '*/.eggs/*',
    '*/.pytype/*',
    '*/.tox/*',
]

[tool.pytest.ini_options]
testpaths = [
    "test",
]

md_report = true
md_report_verbose = 0
md_report_color = "auto"

discord_verbose = 1

[tool.ruff]
line-length = 100
target-version = "py37"
exclude = [
    ".eggs/",
    ".tox/",
    "_sandbox/*",
    "build/",
    "docs/conf.py",
]
